--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<!-- inicio del nav -->
 
-	<nav class="navbar navbar-expand-lg bg-body-tertiary">
+	<nav class="navbar navbar-expand-lg bg-danger">
 		<div class="container-fluid">
 		  <a class="navbar-brand" href="#">Navbar</a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,27 +26,20 @@
 				<a class="nav-link active" aria-current="page" href="#">Home</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="#">Link</a>
+				<a class="nav-link" href="#">Contacto</a>
 			  </li>
 			  <li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-				  Dropdown
+				  Sobre Nosotros
 				</a>
 				<ul class="dropdown-menu">
-				  <li><a class="dropdown-item" href="#">Action</a></li>
-				  <li><a class="dropdown-item" href="#">Another action</a></li>
+				  <li><a class="dropdown-item" href="#">Mision</a></li>
+				  <li><a class="dropdown-item" href="#">Vision</a></li>
 				  <li><hr class="dropdown-divider"></li>
-				  <li><a class="dropdown-item" href="#">Something else here</a></li>
+				  <li><a class="dropdown-item" href="#">Politica</a></li>
 				</ul>
 			  </li>
-			  <li class="nav-item">
-				<a class="nav-link disabled" aria-disabled="true">Disabled</a>
-			  </li>
-			</ul>
-			<form class="d-flex" role="search">
-			  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-			  <button class="btn btn-outline-success" type="submit">Search</button>
-			</form>
+			</ul>	
 		  </div>
 		</div>
 	  </nav>
@@ -148,7 +141,7 @@
 
 		<div class="row">
 
-			<div class="col-sm-6" style="background-color: #1c80c8 ";>
+			<div class="col-sm-6" style="background-color: #3ae51f ";>
 
 				<h3>Primera Columna</h3>
 
@@ -156,7 +149,7 @@
 
 			</div>
 
-			<div class="col-sm-6" style="background-color: #1c99c8 ">
+			<div class="col-sm-6" style="background-color: #cfde26 ">
 
 				<h3>Segunda Columna</h3>
 
@@ -167,7 +160,7 @@
 		</div>
 
 		<div class="row">
-			<div class="col-sm-6" style="background-color: #Dc89c8; color: #000000;">
+			<div class="col-sm-6" style="background-color: #7d90da; color: #000000;">
 
 				<h3>Primera Columna</h3>
 
@@ -186,7 +179,7 @@
 										
 			</div>
 
-			<div class="col-sm-4" style="background-color: #f9e79f; color: #000000;">
+			<div class="col-sm-4" style="background-color: #1d3ee6; color: #000000;">
 
 				<h3>Segunda Columna</h3>
 
@@ -196,7 +189,7 @@
 				
 			</div>
 
-			<div class="col-sm-2" style="background-color: #DAF7A6; color: #000000;">
+			<div class="col-sm-2" style="background-color: #f368de; color: #000000;">
 
 				<h3>Tercera Columna</h3>
 
@@ -210,7 +203,7 @@
 
 		<div class="row">
 
-			<div class="col-sm-8" style="background-color: #1c99c8 ; color: #000000;">
+			<div class="col-sm-8" style="background-color: #f35959 ; color: #000000;">
 
 				<h3>Primera Columna</h3>
 
@@ -218,7 +211,7 @@
 
 			</div>
 
-			<div class="col-sm-4" style="background-color: #Dc89c8; color: #000000;">
+			<div class="col-sm-4" style="background-color: #f6952d; color: #000000;">
 
 				<h3>Segunda Columna</h3>
 
